# Mowgli

./: .gitignore  .readthedocs.yaml  AUTHORS  README.md  cost_atac.npy  cost_rna.npy  environment.yml  figure.png.REMOVED.git-id  pyproject.toml  requirements.txt  setup.py
.github/workflows/: add-to-project.yml  main.yml
docs/: conf.py  index.rst  requirements.txt
docs/source/: conf.py  index.rst  models.rst  pl.rst  score.rst  tl.rst  utils.rst
docs/source/vignettes/: Liu cell lines.ipynb  PBMC.ipynb  Preprocessing PBMC.ipynb.REMOVED.git-id  TF enrichemnt.ipynb  TF enrichment.ipynb
mowgli/: __init__.py  models.py  pl.py  score.py  tl.py  utils.py
scmiot/: models.py  pl.py  tl.py
tests/: context.py  test_main.py
vignettes/: Liu cell lines.ipynb  Liu cell lines.ipynb.REMOVED.git-id  PBMC.ipynb  Preprocessing Liu Cell Lines.ipynb  Preprocessing PBMC.ipynb  Preprocessing PBMC.ipynb.REMOVED.git-id
