[tool.poetry]
name = "mowgli"
version = "0.1.0"
description = "Mowgli is a novel method for the integration of paired multi-omics data with any type and number of omics, combining integrative Nonnegative Matrix Factorization and Optimal Transport."
authors = ["Geert-Jan Huizing <huizing@ens.fr>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = "*"
numpy = "*"
mudata = "*"
tqdm = "*"
scanpy = "*"
anndata = "*"
matplotlib = "*"
scikit-learn = "*"
scipy = "*"

nbsphinx = { version = "*", optional = true }
furo = { version = "*", optional = true }
gprofiler-official = { version = "*", optional = true }
leidenalg = { version = "*", optional = true }

[tool.poetry.extras]
docs = ["nbsphinx", "furo"]
full = ["gprofiler-official", "leidenalg"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
